# local-ai-insight-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_explore_synthetic_data.ipynb  02_prompt_experiments.ipynb
src/features/: build_baseline_features.py  build_llm_severity_features.py  evaluate_llm_structured_coding.py  merge_synthetic_with_gt.py
src/llm/: xml_structured_coding.py
src/synthetic_data/: generate_dataset.py
