[project]
name = "local-ai-insight-pipeline"
version = "0.1.0"
description = "Local-first LLM pipeline for humanitarian text analysis and dashboard generation."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "duckdb>=1.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "streamlit>=1.35",
    "pytest>=8.0",
    "mlx-lm>=0.18.1",
    "huggingface_hub>=0.24",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]